--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Book Taste</title>
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Elsie:900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/solid.css" integrity="sha384-v2Tw72dyUXeU3y4aM2Y0tBJQkGfplr39mxZqlTBDUZAb9BGoC40+rdFCG0m10lXk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/fontawesome.css" integrity="sha384-q3jl8XQu1OpdLgGFvNRnPdj5VIlCvgsDQTQB6owSOHWlAurxul7f+JpUOVdAiJ5P" crossorigin="anonymous">
         <script
           src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <link href="index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
       <main role="main">
-        <h1>Book Taste</h1>
-        <h2>Get book recommendations</h2>
-          <form action="#" class="js-search-form" id="search-form">
-            <label for="query"></label>
-            <input type="text" class="js-query">
-            <button type="submit">Search</button>
-          </form>
+        <div class="hero">
+          <div class="inner-hero">
+            <div class="hero-content">
+                <h1>Book Taste</h1>
+                <h3>Explore book recommendations based on your taste. Type in a book title to start.</h3>
+                <form action="#" class="js-search-form" id="search-form">
+                  <label for="query"></label>
+                  <input type="text" class="js-query" placeholder="Romeo and Juliet">
+                  <button type="submit"><i class="fas fa-search"></i> search</button>
+                </form>
+              </div>
+          </div>
+        </div>
           
           <div class="results-area">
             <div class="js-search-results" aria-live="assertive"></div>
           </div>
       </main>
       <section class="lightbox">
-        <div class="inner">
+        <div class="inner-lightbox">
           <button>Close</button>
         </div>
       </section>
