capitalize function completed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="results-bar" hidden>
-        <span>If you like <span></span>, check out these books:</span>
+        <span class="results-bar-content">If you like <span></span>, check out these books:</span>
         <button class="clear-btn">clear</button>
       </div>
       <div class="results-area">
