--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <div class="hero">
         <div class="inner-hero">
           <div class="hero-content">
-              <h1>Book Taste</h1>
-              <h3>Explore book recommendations based on your taste. Type in a book title to start.</h3>
-              <form action="#" class="js-search-form" id="search-form">
-                <label for="query"><input type="text" class="js-query" placeholder="Romeo and Juliet"></label>
-                <button type="submit"><i class="fas fa-search"></i> search</button>
-              </form>
-            </div>
+            <h1>Book Taste</h1>
+            <h3>Explore book recommendations based on your taste. Type in a book title to start.</h3>
+            <form action="#" class="js-search-form" id="search-form">
+              <label for="query"><input type="text" class="js-query" placeholder="Romeo and Juliet"></label>
+              <button type="submit"><i class="fas fa-search"></i> search</button>
+            </form>
+          </div>
         </div>
       </div>
       <div class="results-bar" hidden>
@@ -38,10 +38,12 @@
     </main>
     <section class="lightbox">
       <div class="inner-lightbox">
-        <button class="lightbox-btn">
-          <i class="fas fa-window-close fa-3x"></i>
-        </button>
-        <div class="lightbox-content"></div>
+        <div class="lightbox-border">
+          <button class="lightbox-btn">
+            <i class="fas fa-window-close fa-3x"></i>
+          </button>
+          <div class="lightbox-content"></div>
+        </div>
       </div>
     </section>
     <script src="index.js"></script>
