edited mouseover for thumbnails

--- a/index.html
+++ b/index.html
@@ -38,12 +38,11 @@
     </main>
     <section class="lightbox">
       <div class="inner-lightbox">
-        <div class="lightbox-border">
           <button class="lightbox-btn">
             <i class="fas fa-window-close fa-3x"></i>
           </button>
           <div class="lightbox-content"></div>
-        </div>
+          <div class="author"></div>
       </div>
     </section>
     <script src="index.js"></script>
