fixed thumbnail grid

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           </div>  
       </div>
       <div class="results-area">
-        <div class="js-search-results" aria-live="assertive"></div>
+        <div class="js-search-results" aria-live="assertive">
+          
+        </div>
       </div>
     </main>
     <section class="lightbox">
