styled lightbox, cleaned up js, fixed cases with no description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section role="region" class="lightbox">
       <div class="inner-lightbox">
           <button class="lightbox-btn"> 
-            <i class="fas fa-window-close fa-3x"></i>
+            <i class="fas fa-times fa-3x" title="close"></i>
           </button>
           <div class="lightbox-content"></div>
           <div class="author"></div>
